# Server_datos2

./: CMakeLists.txt  Comprobate_loop.cpp  Comprobate_loop.h  Json_Factory.cpp  Json_Factory.h  MyThread.h  NodoS.cpp  NodoS.h  Server.cpp  Server.h  main.cpp
Allocator/: Maper.cpp  Maper.h  Simple_List.cpp  Simple_List.h  Simple_Node.cpp  Simple_Node.h  static_reserver.cpp  static_reserver.h
threading/: ListaSimple.cpp  ListaSimple.h  MyThread.cpp  NodoS.h
